changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Use 'magic devices' for weapon and armour improvers during pickup.
Partial fix for bug #3075860: Auto-pickup fails to pickup certain items.
Nicolas Weeger 2010-10-02

Extend 'reset' to enable to reset unique player maps and unique squares in maps.
Nicolas Weeger 2010-09-29

Fix bug #1811411: Ground view is not correctly updated.
Correctly send face and name information when there is a player on an item
that is being identified.
Nicolas Weeger 2010-09-26

Simplify door-opening with keys for player, bypassing hit_player().
This should partly fix bug #1811331: discrete damage bug.
Nicolas Weeger 2010-09-26

Fix bug #2072850: Inconsistent limits for damage stat.
Nicolas Weeger 2010-09-26

Tentative fix for bug #2020224: buggy(?) crafting yields.
Don't call again attempt_recipe(), as that would give again artifact properties
to the item. Instead, use the item in the cauldron.
Nicolas Weeger 2010-09-26

Partial fix for bug #3075860: Auto-pickup fails to pickup certain items.
Correctly pick weapons.
Nicolas Weeger 2010-09-26

Fix bug #2938887: problem with casting unknown spell.
Change the display logic, don't show all spells when no matching spell.
Nicolas Weeger 2010-09-26

Directors should not move doors.
This fixes bug #3059451: force (smover) throws doors off hinges.
Nicolas Weeger 2010-09-21

Ignore 'FLAG_OBJ_ORIGINAL' for merging purposes. This fixes a merging bug with
unique maps.
Nicolas Weeger 2010-09-12

Fix broken DM 'follow' command.
Nicolas Weeger 2010-09-12

Add unit test exposing a weight reduction issue with containers.
Fix said weight reduction bug.